Fix 4+ torrent flags display on IE

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -538,7 +538,7 @@ th {
 }
 
 .tr-flag {
-    white-space: initial!important;
+    white-space: normal!important;
 }
 
 .tr-name {
